Name:                ediT2-haskell
Version:             0.8
Description:         Pattern generator
Author:              Yann Uzel
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable ediT2-haskell
  Build-Depends:     base >= 3 && < 5
  Main-is:           ediT2-haskell.hs
  Hs-Source-Dirs:    src
  Other-Modules:     RT.RT Constraint.Checker Editor.Editor Jigsaw.Jigsaw Jigsaw.JigsawModel Simulation.Simulation Simulation.SimulationModel Util.Constraints Util.KobbeComponents Util.Tree Util.TreeGenerator Util.Util
  extensions:        DoAndIfThenElse